@@ -6,7 +6,7 @@
 
     <groupId>org.thewindsrise.faiz</groupId>
     <artifactId>faiz</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.1</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -14,10 +14,13 @@
     </modules>
 
     <properties>
-        <subproject.version>0.1.0</subproject.version>
+        <subproject.version>0.1.1</subproject.version>
+        <netty.version>4.1.100.Final</netty.version>
+        <slf4j.version>1.7.36</slf4j.version>
+        <logback.version>1.4.12</logback.version>
         <junit.version>4.13.2</junit.version>
 
-        <maven.compiler.version>3.8.1</maven.compiler.version>
+        <maven.compiler.version>3.13.0</maven.compiler.version>
 
         <maven.compiler.source>22</maven.compiler.source>
         <maven.compiler.target>22</maven.compiler.target>
@@ -26,6 +29,28 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.thewindsrise.faiz</groupId>
+                <artifactId>faiz.base</artifactId>
+                <version>${subproject.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-bom</artifactId>
+                <version>${netty.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
@@ -44,8 +69,8 @@
                     <source>22</source>
                     <target>22</target>
                     <compilerArgs>
-                        <arg>-parameters</arg>
                         <arg>--enable-preview</arg>
+                        <arg>-parameters</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -59,8 +84,8 @@
                     <version>${maven.compiler.version}</version>
                     <configuration>
                         <compilerArgs>
+                            <arg>--ena ble-preview</arg>
                             <arg>-parameters</arg>
-                            <arg>--enable-preview</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
